tests-integration/fixtures/checking/088_derive_eq_1/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Id :: forall (@a :: Type). (a :: Type) -> Id (a :: Type)
Pair :: forall (@a :: Type). (a :: Type) -> (a :: Type) -> Pair (a :: Type)
Mixed :: forall (@a :: Type). Int -> (a :: Type) -> Boolean -> Mixed (a :: Type)
Rec :: forall (@a :: Type). { count :: Int, value :: (a :: Type) } -> Rec (a :: Type)
Wrap ::
  forall (t6 :: Type) (@f :: (t6 :: Type) -> Type) (@a :: (t6 :: Type)).
    (f :: (t6 :: Type) -> Type) (a :: (t6 :: Type)) ->
    Wrap @(t6 :: Type) (f :: (t6 :: Type) -> Type) (a :: (t6 :: Type))
Compose ::
  forall (t11 :: Type) (t10 :: Type) (@f :: (t11 :: Type) -> Type)
    (@g :: (t10 :: Type) -> (t11 :: Type)) (@a :: (t10 :: Type)).
    (f :: (t11 :: Type) -> Type) ((g :: (t10 :: Type) -> (t11 :: Type)) (a :: (t10 :: Type))) ->
    Compose @(t11 :: Type) @(t10 :: Type)
      (f :: (t11 :: Type) -> Type)
      (g :: (t10 :: Type) -> (t11 :: Type))
      (a :: (t10 :: Type))
Left' :: forall (@a :: Type). (a :: Type) -> Either' (a :: Type)
Right' :: forall (@a :: Type). (a :: Type) -> Either' (a :: Type)
NoEq :: forall (@a :: Type). (a :: Type) -> NoEq (a :: Type)

Types
Id :: Type -> Type
Pair :: Type -> Type
Mixed :: Type -> Type
Rec :: Type -> Type
Wrap :: forall (t6 :: Type). ((t6 :: Type) -> Type) -> (t6 :: Type) -> Type
Compose ::
  forall (t11 :: Type) (t10 :: Type).
    ((t11 :: Type) -> Type) -> ((t10 :: Type) -> (t11 :: Type)) -> (t10 :: Type) -> Type
Either' :: Type -> Type
NoEq :: Type -> Type

Derived
derive forall (t14 :: Type). Eq (t14 :: Type) => Eq (Id (t14 :: Type))
derive Eq1 Id
derive forall (t16 :: Type). Eq (t16 :: Type) => Eq (Pair (t16 :: Type))
derive Eq1 Pair
derive forall (t18 :: Type). Eq (t18 :: Type) => Eq (Mixed (t18 :: Type))
derive Eq1 Mixed
derive forall (t20 :: Type). Eq (t20 :: Type) => Eq (Rec (t20 :: Type))
derive Eq1 Rec
derive forall (t22 :: Type -> Type) (t23 :: Type).
  Eq1 (t22 :: Type -> Type) =>
  Eq (t23 :: Type) =>
  Eq (Wrap @Type (t22 :: Type -> Type) (t23 :: Type))
derive forall (t26 :: Type -> Type). Eq1 (t26 :: Type -> Type) => Eq1 (Wrap @Type (t26 :: Type -> Type))
derive forall (t28 :: Type -> Type) (t31 :: Type) (t29 :: (t31 :: Type) -> Type) (t30 :: (t31 :: Type)).
  Eq1 (t28 :: Type -> Type) =>
  Eq ((t29 :: (t31 :: Type) -> Type) (t30 :: (t31 :: Type))) =>
  Eq
    (Compose @Type @(t31 :: Type)
      (t28 :: Type -> Type)
      (t29 :: (t31 :: Type) -> Type)
      (t30 :: (t31 :: Type)))
derive forall (t36 :: Type -> Type) (t37 :: Type -> Type).
  Eq1 (t36 :: Type -> Type) => Eq1 (Compose @Type @Type (t36 :: Type -> Type) (t37 :: Type -> Type))
derive forall (t40 :: Type). Eq (t40 :: Type) => Eq (Either' (t40 :: Type))
derive Eq1 Either'
derive Eq1 NoEq

Roles
Id = [Representational]
Pair = [Representational]
Mixed = [Representational]
Rec = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
Either' = [Representational]
NoEq = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((t37 :: Type -> Type) (t47 :: Type))
  --> 34:1..34:43
   |
34 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Eq (NoEq (t49 :: Type))
  --> 43:1..43:25
   |
43 | derive instance Eq1 NoEq
   | ^~~~~~~~~~~~~~~~~~~~~~~~
